ADD the proof concept of virtual thread and blocking thread
