# src/main/resources/openapi/pnr-spec.yml
@@ -51,13 +51,13 @@ components:
         passengers:
           type: array
           items:
-            $ref: '#/components/schemas/Passenger'
+            $ref: '#/components/schemas/PassengerResponse'
         flights:
           type: array
           items:
-            $ref: '#/components/schemas/Flight'
+            $ref: '#/components/schemas/FlightResponse'
 
-    Passenger:
+    PassengerResponse:
       type: object
       properties:
         passengerNumber:
@@ -78,9 +78,9 @@ components:
           nullable: true
           example: emirates.com?ticket=someTicketRef
         baggage:
-          $ref: '#/components/schemas/Baggage'
+          $ref: '#/components/schemas/BaggageResponse'
 
-    Baggage:
+    BaggageResponse:
       type: object
       properties:
         allowanceUnit:
@@ -93,7 +93,7 @@ components:
           type: integer
           example: 7
 
-    Flight:
+    FlightResponse:
       type: object
       properties:
         flightNumber:
